<resources>
    <string name="app_name">HR_checker</string>
    <string name="listIsEmpty">Список пуст</string>
    <string name="statisticMenuButton">Статистика</string>
    <string name="eventsActivityTitle">Check-in</string>
    <string name="form">Анкета</string>
    <string name="patronymic">1. Отчество</string>
    <string name="phone">2. Мобильный телефон</string>
    <string name="email">3. Электронная почта</string>
    <string name="city">4. Город</string>
    <string name="company">5. Компания</string>
    <string name="position">6. Должность</string>
    <string name="addition">7. Дополнительная информация</string>
    <string name="membersRegistered">Зарегистрировано пользователей:</string>
    <string name="membersChecked">Отмечено пользователей:</string>
    <string name="action_search">Поиск</string>
    <string name="search_hint">Введите имя</string>
    <string name="sendMembersButton">Отправить данные</string>
    <string name="postRequestErrorToast">Что-то пошло не так</string>
    <string name="postRequestSuccessfulToast">Отправка прошла успешно</string>
    <string name="postRequestNothingToSend">Список присутствующих пуст</string>
    <string name="eventImageContentDescription">Изображение мероприятия</string>
</resources>
